estructurar formulario de resumen de pedido

--- a/FarmaciaPedidos/Views/ResumenPedidoForm.resx
+++ b/FarmaciaPedidos/Views/ResumenPedidoForm.resx
@@ -4937,4 +4937,7 @@
         WDgpA4pBB7YGqF6SMbwjC8HdhlW3tJHtsxl7kdHk7i3Xc/FM66WKOLs3ak7D8V1V15UVeX//2Q==
 </value>
   </data>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
